// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toolshot components/Playlist/Playlist.tools.svelte: Default 1`] = `
<div>
   
  <span
    class="svelte-9e8ghi overlay"
    role="article"
  >
    <div
      class="content svelte-9e8ghi"
    >
      <span
        class="artwork svelte-9e8ghi"
      />
       
      <p
        class="controls svelte-9e8ghi"
      >
         
        <button
          class="primary iconOnly large svelte-1vd9h50"
          data-testid="play"
        >
          <i
            class="material-icons svelte-1vd9h50"
          >
            play_arrow
          </i>
           
           
           
        </button>
         
        <button
          class="primary iconOnly large svelte-1vd9h50"
          data-testid="enqueue"
        >
          <i
            class="material-icons svelte-1vd9h50"
          >
            playlist_add
          </i>
           
           
           
        </button>
      </p>
    </div>
     
    <header
      class="svelte-9e8ghi"
    >
      <h3
        class="svelte-9e8ghi"
      >
        My favourites
      </h3>
       
      <h4
        slot="details"
      >
        3 tracks
      </h4>
    </header>
  </span>
</div>
`;

exports[`Toolshot components/Playlist/Playlist.tools.svelte: Single track 1`] = `
<div>
   
  <span
    class="svelte-9e8ghi overlay"
    role="article"
  >
    <div
      class="content svelte-9e8ghi"
    >
      <span
        class="artwork svelte-9e8ghi"
      />
       
      <p
        class="controls svelte-9e8ghi"
      >
         
        <button
          class="primary iconOnly large svelte-1vd9h50"
          data-testid="play"
        >
          <i
            class="material-icons svelte-1vd9h50"
          >
            play_arrow
          </i>
           
           
           
        </button>
         
        <button
          class="primary iconOnly large svelte-1vd9h50"
          data-testid="enqueue"
        >
          <i
            class="material-icons svelte-1vd9h50"
          >
            playlist_add
          </i>
           
           
           
        </button>
      </p>
    </div>
     
    <header
      class="svelte-9e8ghi"
    >
      <h3
        class="svelte-9e8ghi"
      >
        My favourites
      </h3>
       
      <h4
        slot="details"
      >
        1 track
      </h4>
    </header>
  </span>
</div>
`;
